fixes before merging to odis

--- a/app/Rmd/intro_EN.Rmd
+++ b/app/Rmd/intro_EN.Rmd
@@ -32,17 +32,17 @@ knitr::opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, fig.align="lef
 minYear <- 2010
 lapply(list.files(here::here("app/R"), pattern = ".[Rr]$", full.names = TRUE),source) # check helpers.R for a list of packages
 copy_rdata_files() # make sure data files are up to date. 
-load(here::here("app/data/testData.RData"))
-#load(here::here("app/data/OpenData.RData"))
-#load(here::here("app/data/OpenData_sardist.RData"))
-#load(here::here("app/data/SecureData.RData"))
+#load(here::here("app/data/testData.RData"))
+load(here::here("app/data/OpenData.RData"))
+load(here::here("app/data/OpenData_sardist.RData"))
+load(here::here("app/data/SecureData.RData"))
 #load("\\\\ent.dfo-mpo.ca\\ATLShares\\Science\\BIODataSvc\\SRC\\Reproducible_Reporting\\data\\SecureData.Rdata")
 
 ```
 
 ```{r  Load-Search-Area, echo=FALSE, include=FALSE, cache=FALSE}
-studyArea <- sf::st_read("{{path_to_geoms}}")
-# studyArea <- sf::st_read(here::here("app/output/geoms_slc.geojson"))
+#studyArea <- sf::st_read("{{path_to_geoms}}")
+studyArea <- sf::st_read(here::here("app/output/geoms_slc.geojson"))
 # Uncomment the following to test fixed polygon:
 # studyArea <- st_read(here::here("app/studyAreaTest/geoms_slc_test.geojson")) #Offshore
 # studyArea <- st_read(here::here("app/studyAreaTest/geoms_slc_coastal_test.geojson")) #coastal
@@ -59,8 +59,8 @@ list2env(mapDataList, envir = environment())
 
 <!-- # ```{r child = c('../Rmd/report_cetaceans_EN.Rmd', 'report_fish_EN.Rmd', 'report_habitat_EN.Rmd', 'report_planning_EN.Rmd', 'report_SARA_EN.Rmd')} -->
 <!-- # ``` -->
-<!-- ```{r child = '../Rmd/report_fish_EN.Rmd'}
- ``` -->
+<!--```{r child = '../Rmd/report_cetaceans_EN.Rmd'}
+```-->
 
 <!-- END  -->
 
