--- a/app/Rmd/report_cetaceans_FR.Rmd
+++ b/app/Rmd/report_cetaceans_FR.Rmd
@@ -47,7 +47,7 @@ outputList <- master_intersect(wsdb_sf, mapDataList)
 ```
 *
 ```{r wsdb-result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
-Report_wsdb <- if (is.null(outputList)) {
+Report_wsdb <- if (is.null(outputList$studyData)) {
    "There are no relevant records in the WSDB for this search area."
  } else {
    "There are relevant records in the WSDB for this search area."
@@ -56,7 +56,7 @@ Report_wsdb <- if (is.null(outputList)) {
 ```
 
 ```{r wsdb-plot, fig.height=8, fig.width=11, fig.cap='Niveau de qualité : Faible. Niveau de sécurité : Aucun. Carte montrant la zone de recherche définie par l’utilisateur (entourée de rouge). La carte affiche des renseignements tirés de la base de données sur les observations de baleines (BDOB) (y compris les observations de groupes d’animaux), pour les espèces de cétacés dans la zone de recherche et inscrites en vertu de la Loi sur les espèces en péril (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). <b>Si une espèce est absente de cette carte, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b> L’absence peut être liée à un effort d’enquête faible ou nul. L’information sur les observations sous-représente la présence de cétacés, en particulier les espèces qui vivent en eau profonde (p. ex., les baleines à bec) et qui passent peu de temps à la surface. Cette carte n’inclut pas non plus les détections acoustiques. Les observations sur terre indiquent que les données d’observation n’ont pas encore été complètement vérifiées ou que des animaux ont été observés depuis la côte.'}
-if (!is.null(outputList)) {
+if (!is.null(outputList$studyData)) {
   plot_rr_sf(areaMap, outputList$mapData, attribute="Legend", legendColours = whale_col)
 }
 ```
@@ -80,7 +80,7 @@ outputList <- master_intersect(whitehead_sf, mapDataList)
 ```
 *
 ```{r whitehead-result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
-Report_whitehead <-  if (is.null(outputList)) {
+Report_whitehead <-  if (is.null(outputList$studyData)) {
    "Il n’existe aucun registre pertinent dans la base de données du laboratoire Whitehead pour cette zone de recherche."
  } else {
    "Il existe des registres pertinents dans la base de données du laboratoire Whitehead pour cette zone de recherche."
@@ -89,7 +89,7 @@ writeLines(Report_whitehead)
 ```
 
 ```{r whitehead-plot, fig.height=8, fig.width=11, fig.cap='Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Carte montrant la zone de recherche définie par l’utilisateur (entourée de rouge). La carte affiche des renseignements tirés du laboratoire Whitehead pour les espèces de cétacés dans la zone de recherche et inscrites en vertu de la Loi sur les espèces en péril (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC)s. Les efforts sur le terrain ont surtout été menés dans la zone de protection marine de Gully et les canyons adjacents le long de la limite est du plateau néo-écossais, par beau temps (par exemple, consulter Whitehead 2013 pour voir une carte des efforts entre 1988 et 2011), bien que certaines données des relevés le long de la limite du plateau au large de la Nouvelle-Écosse et de Terre-Neuve-et-Labrador soient incluses. <b>Si une espèce est absente de cette carte, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b> L’absence peut être liée à un effort d’enquête faible ou nul. Cette carte n’inclut pas non plus les détections acoustiques. L’information sur les observations sous-représente la présence de cétacés, en particulier les espèces qui vivent en eau profonde (p. ex., les baleines à bec) et qui passent peu de temps à la surface. Pour de plus amples renseignements, consultez le site :<https://whiteheadlab.weebly.com/contact.html>'}
-if (!is.null(outputList)) {
+if (!is.null(outputList$studyData)) {
   plot_rr_sf(areaMap, outputList$mapData, attribute="Legend", legendColours = whale_col)
 }
 ```
@@ -112,7 +112,7 @@ outputList <- master_intersect(narwc_sf, mapDataList)
 ```
 *
 ```{r narwc-result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
-Report_narwc <-  if (is.null(outputList)) {
+Report_narwc <-  if (is.null(outputList$studyData)) {
    "Il n’existe aucun registre pertinent dans la base de données du NARWC pour cette zone de recherche."
  } else {
    "Il existe des registres pertinents dans la base de données du NARWC pour cette zone de recherche."
@@ -120,7 +120,7 @@ Report_narwc <-  if (is.null(outputList)) {
 writeLines(Report_narwc)
 ```
 ```{r narwc-plot, fig.height=8, fig.width=11, fig.cap='Niveau de qualité : Élevée Niveau de sécurité : Aucun. Carte montrant la zone de recherche définie par l’utilisateur (entourée de rouge). La carte affiche des renseignements tirés de la Base de données des observations du North Atlantic Right Whale Consortium (NARWC) pour les espèces de cétacés dans la zone de recherche et inscrites en vertu de la <i>Loi sur les espèces en péril</i> (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). <b>Si une espèce est absente de cette carte, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone</b> , puisque l’effort de relevé est biaisé vers le nord-est des États-Unis, et les données sur la présence d’espèces provenant des détections acoustiques ne sont pas incluses. Pour de plus amples renseignements, consultez le site : <https://www.narwc.org/sightings-database.html>'}
-if (!is.null(outputList)) {
+if (!is.null(outputList$studyData)) {
    plot_rr_sf(areaMap, outputList$mapData, attribute="Legend", legendColours = whale_col)
 }
 ```
@@ -142,7 +142,7 @@ outputList <- master_intersect(obis_cet_sf, mapDataList)
 ```
 *
 ```{r obis-result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
-Report_obis_cet <-  if (is.null(outputList)) {
+Report_obis_cet <-  if (is.null(outputList$studyData)) {
   "Il n’existe aucun registre pertinent pour les cétacés dans le système d’information sur la biodiversité des océans (SIBO) pour cette zone de recherche."
 } else {
   "Il existe des registres pertinents pour les cétacés dans le système d’information sur la biodiversité des océans (SIBO) pour cette zone de recherche."
@@ -151,7 +151,7 @@ writeLines(Report_obis_cet)
 ```
 
 ```{r obis-plot, fig.height=8, fig.width=11, fig.cap='Niveau de qualité : Moyenne. Niveau de sécurité : Aucun. Carte montrant la zone de recherche définie par l’utilisateur (entourée de rouge). La carte affiche des renseignements tirés du SIBO pour les espèces de cétacés dans la zone de recherche et inscrites en vertu de la <i>Loi sur les espèces en péril</i> (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). <b>Si une espèce est absente de cette carte, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b> . L’absence peut être liée à un effort d’enquête faible ou nul. L’information sur les observations sous-représente la présence de cétacés, en particulier les espèces qui vivent en eau profonde (p. ex., les baleines à bec) et qui passent peu de temps à la surface. Cette carte n’inclut pas non plus les détections acoustiques. Les observations sur terre indiquent que les données d’observation n’ont pas encore été complètement vérifiées ou que des animaux ont été observés depuis la côte.'}
-if (!is.null(outputList)) {
+if (!is.null(outputList$studyData)) {
   plot_rr_sf(areaMap, outputList$mapData, attribute="Legend", legendColours = whale_col)
 }
 ```
@@ -172,7 +172,16 @@ Considérations importantes relatives à l’utilisation : les prévisions modé
 #### ***Résultats de la recherche du MRE pour les cétacés, par zone***
 ```{r sdm, include=FALSE, cache=FALSE}
 
-table_sdm <- sdm_table(fin_whale_sf, harbour_porpoise_sf, humpback_whale_sf, sei_whale_sf, studyArea)
+clippedFin <- master_intersect(fin_whale_sf, mapDataList)
+clippedHp <- master_intersect(harbour_porpoise_sf, mapDataList)
+clippedHump <- master_intersect(humpback_whale_sf , mapDataList)
+clippedSei <- master_intersect(sei_whale_sf, mapDataList)
+
+table_sdm <- data.frame("Fin Whale" = !is.null(clippedFin$studyData),
+                        "Habour Porpoise" = !is.null(clippedHp$studyData),
+                        "Humpback Whale" = !is.null(clippedHump$studyData),
+                        "Sei Whale" = !is.null(clippedSei$studyData))
+
 ```
 ```{r sdm-table}
  knitr::kable(table_sdm, align="cccc", caption=". Niveau de qualité : Faible. Niveau de sécurité : Aucun. Résultats indiquant si la zone de recherche chevauche les zones prioritaires prévues pour améliorer la surveillance de plusieurs espèces de cétacés (rorqual commun, marsouin commun, rorqual à bosse et rorqual boréal). VRAI = le polygone chevauche la zone prioritaire; FAUX = le polygone ne chevauche PAS la zone prioritaire.", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
