--- a/app/Rmd/report_habitat_EN.Rmd
+++ b/app/Rmd/report_habitat_EN.Rmd
@@ -1,3 +1,8 @@
+---
+output: html_document
+editor_options: 
+  chunk_output_type: console
+---
 ## **HABITAT INFORMATION**
 
 ### **Intertidal Vegetation and Rockweed**
@@ -31,8 +36,8 @@ clipped <- master_intersect(poly_sf, mapDataList)
 ```
 *
 ```{r overlap-rockweed-output, echo=FALSE, results='asis'}
- 
-polyText <- if(is.null(clipped$studyData)){"There are no relevant records of predicted intertidal vegetation for this search area."
+polyText <- if(is.null(clipped$studyData)){
+  "There are no relevant records of predicted intertidal vegetation for this search area."
 } else {"There are relevant records of predicted intertidal vegetation for this search area."}
 
  polyText <- noquote(polyText)
@@ -41,7 +46,7 @@ polyText <- if(is.null(clipped$studyData)){"There are no relevant records of pre
 
 ```{r rockweed-plot, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: none. Map showing the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue. Figure shows overlap between the search area and satellite-based maps of intertidal vegetation and rockweed presence polygons.'}
 if(!is.null(clipped$studyData)){print(
-  plot_rr_sf(areaMap, clipped$mapData, attribute))}
+  plot_rr_sf(areaMap, clipped$mapData, attribute, outlines = FALSE))}
 ```
 
 ```{r table-rockweed, echo=FALSE, cache=FALSE, include = FALSE}
