--- a/app/Rmd/report_habitat_FR.Rmd
+++ b/app/Rmd/report_habitat_FR.Rmd
@@ -40,7 +40,7 @@ polyText<-if(is.null(clipped$studyData)){"Il n’existe aucun registre pertinent
 
 ```{r rockweed-plot, fig.height=8, fig.width=11, fig.cap='Niveau de qualité : Moyenne. Niveau de sécurité : Aucun. Carte montrant la zone de recherche définie par l’utilisateur : l’emplacement du projet ou de l’activité proposé est surligné en jaune (polygone d’entrée), entouré d’une zone exposée ou d’une zone tampon définie par l’utilisateur en bleu. La figure illustre le chevauchement entre la zone de recherche et les cartes satellitaires de la végétation intertidale et des polygones de présence de fucus.'}
 if(!is.null(clipped$studyData)){print(
-  plot_rr_sf(areaMap, clipped$mapData, attribute))}
+  plot_rr_sf(areaMap, clipped$mapData, attribute, outlines=FALSE))}
 ```
 
 ```{r table-rockweed, echo=FALSE, cache=FALSE, include = FALSE}
