--- a/app/Rmd/report_SARA_FR.Rmd
+++ b/app/Rmd/report_SARA_FR.Rmd
@@ -93,7 +93,7 @@ attribute <- "Common_Nam"
 legendName <- "Common Name"
 
 # intersect polyData with 3 polygons (region, map area, and study box)
-clipped <- master_intersect(poly_sf, mapDataList)
+clipped <- master_intersect(poly_sf, mapDataList, getRegion=TRUE)
 ```
 
 ```{r crithab-region-plot, fig.cap='Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Cette carte résume l’habitat essentiel des espèces en péril inscrites comme en voie de disparition ou menacées en vertu de la LEP de la biorégion du plateau néo-écossais. Veuillez consulter le tableau ci-dessous pour l’information complémentaire. Selon la définition de l’article 2 de la LEP, l’habitat essentiel est en fait « l’habitat nécessaire à la survie ou au rétablissement d’une espèce sauvage inscrite, qui est désigné comme tel dans un programme de rétablissement ou un plan d’action élaboré à l’égard de l’espèce ». L’habitat essentiel est désigné dans un programme de rétablissement final ou un plan d’action publié dans le Registre public des espèces en péril (http://www.sararegistry.gc.ca). Il ne s’agit <b>pas</b> d’une source ni d’un conseil faisant autorité en ce qui concerne les données sur les espèces en péril. Veuillez accéder au SIG des espèces en péril (http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US) pour créer un rapport faisant autorité.', fig.height=6, fig.width=11}
@@ -114,7 +114,7 @@ poly_sf <- leatherback_sf
 attribute <- "NONE"
 
 # intersect polyData with 3 polygons (region, map area, and study box)
-clipped <- master_intersect(poly_sf, mapDataList)
+clipped <- master_intersect(poly_sf, mapDataList, getRegion=TRUE)
 ```
 
 ```{r letherback-region-plot, fig.cap='Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Cette carte résume l’ébauche de l’habitat essentiel de la tortue luth de la biorégion du plateau néo-écossais, par rapport à la zone de recherche. ', fig.height=6, fig.width=11}
