--- a/app/Rmd/report_planning_FR.Rmd
+++ b/app/Rmd/report_planning_FR.Rmd
@@ -20,7 +20,7 @@ Description de l’ensemble de données (tirée du dossier des données ouvertes
 *
 ```{r EBSA-results, echo=FALSE, results='asis'}
 #function for overlap
-EBSAoutput <- master_intersect(EBSA_sf, mapDataList)
+EBSAoutput <- master_intersect(EBSA_sf, mapDataList, getRegion=TRUE)
 
 # define polygon dataset and attribute to plot
 attribute <- "NONE"
