--- a/app/Rmd/report_habitat_EN.Rmd
+++ b/app/Rmd/report_habitat_EN.Rmd
@@ -29,7 +29,15 @@ Data notes:
 ```{r overlap-rockweed, echo=FALSE, results='asis'}
 # define polygon dataset and attribute to plot
 poly_sf <- rockweed_sf
-attribute <- "RWP"
+attribute <- "status"
+
+# set status column
+poly_sf$status = ""
+poly_sf$status[which(poly_sf$RWP==1)] = "Present"
+poly_sf$status[which(poly_sf$RWP==2)] = "Likely Present"
+poly_sf$status[which(poly_sf$RWP==5)] = "Unknown"
+poly_sf$status[which(poly_sf$RWP==0)] = "Not Present"
+
 
 # intersect polyData with 3 polygons (region, map area, and study box)
 clipped <- master_intersect(poly_sf, mapDataList)
@@ -38,21 +46,25 @@ clipped <- master_intersect(poly_sf, mapDataList)
 ```{r overlap-rockweed-output, echo=FALSE, results='asis'}
 polyText <- if(is.null(clipped$studyData)){
   "There are no relevant records of predicted intertidal vegetation for this search area."
-} else {"There are relevant records of predicted intertidal vegetation for this search area."}
+} else {
+  "There are relevant records of predicted intertidal vegetation for this search area."
+}
 
  polyText <- noquote(polyText)
  writeLines(polyText)
 ```
 
 ```{r rockweed-plot, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: none. Map showing the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue. Figure shows overlap between the search area and satellite-based maps of intertidal vegetation and rockweed presence polygons.'}
-if(!is.null(clipped$studyData)){print(
-  plot_rr_sf(areaMap, clipped$mapData, attribute, outlines = FALSE))}
+if(!is.null(clipped$studyData)){
+  print(plot_rr_sf(areaMap, clipped$mapData, attribute, outlines = FALSE, legendName="Rockweed"))
+}
 ```
 
 ```{r table-rockweed, echo=FALSE, cache=FALSE, include = FALSE}
 if(!is.null(clipped$studyData)){
-  rwTable <- rockweedStats(clipped$studyData, studyArea)}
+  rwTable <- rockweedStats(clipped$studyData, studyArea)
   names(rwTable) <- c("Category", "Number of Polygons", "Area km2")
+}
 ```
 
 ```{r rockweed-table}
